# restful-web-app-course-work

./: .env  .gitignore  Cargo.toml  NOTES.md
migrations/: 20240411084251_init.down.sql  20240411084251_init.up.sql
src/: auth.rs  logging.rs  main.rs  models.rs  templates.rs  valid.rs
src/entities/: accounts.rs  assignments.rs  assignments_marks.rs  attended_meetings.rs  logs.rs  meetings.rs  mod.rs  prelude.rs  students.rs  subjects.rs  subjects_attendies.rs  teachers.rs  users.rs
src/services/: auth.rs  mod.rs
src/services/admin/: attendance.rs  attendies.rs  db.rs  logs.rs  marks.rs  meetings.rs  mod.rs  profile.rs  students.rs  subjects.rs  tasks.rs  teachers.rs
src/services/student/: meetings.rs  mod.rs  profile.rs  stats.rs  subjects.rs  tasks.rs  teachers.rs
src/services/teacher/: attendance.rs  marks.rs  meetings.rs  mod.rs  profile.rs  stats.rs  students.rs  subjects.rs  tasks.rs
ui/: admin.html  admin.js  login.html  login.js  signup.html  student.html  student.js  teacher.html  teacher.js
