[package]
name = "course-work"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
futures-util = "0.3.30"
jwt-simple = "0.12.9"
serde = "1.0.197"
chrono = {version = "0.4.34", features = ["serde"]}
validator = { version = "0.17", features = ["derive"] }
regex = "1.10.4"

sea-orm = { version = "0.12", features = [ "sqlx-mysql","runtime-tokio-rustls", "macros"] }
sea-query = { version = "0.30.7", features = ["derive"] }
actix-cors = "0.7.0"
